--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==1.7
+dj-static==0.0.6
 argparse==1.2.1
 wsgiref==0.1.2
+gunicorn==19.1.1
 https://github.com/possatti/django-polls/tarball/master
