Acrescentando dependências que estavam faltando
Faltava a dependência para o drive de comunicação com o banco de
dados postgres ('psycopg2').

Também foi adicionado como dependência o pacote 'static3', para
servir os arquivos estáticos.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ dj-database-url==0.3.0
 argparse==1.2.1
 wsgiref==0.1.2
 gunicorn==19.1.1
+psycopg2==2.5.4
+static3==0.5.1
 https://github.com/possatti/django-polls/tarball/master
